--- a/sources/jpeg/CMakeLists.txt
+++ b/sources/jpeg/CMakeLists.txt
@@ -1,64 +1,64 @@
 set(JPEG_SOURCES
-    Jcapimin.c
-    Jcapistd.c
-    Jccoefct.c
-    Jccolor.c
-    Jcdctmgr.c
-    Jchuff.c
-    Jcinit.c
-    Jcmainct.c
-    Jcmarker.c
-    Jcmaster.c
-    Jcomapi.c
-    Jcparam.c
-    Jcphuff.c
-    Jcprepct.c
-    Jcsample.c
-    Jctrans.c
-    Jdapimin.c
-    Jdapistd.c
-    Jdatadst.c
-    Jdatasrc.c
-    Jdcoefct.c
-    Jdcolor.c
-    Jddctmgr.c
-    Jdhuff.c
-    Jdinput.c
-    Jdmainct.c
-    Jdmarker.c
-    Jdmaster.c
-    Jdmerge.c
-    Jdphuff.c
-    Jdpostct.c
-    Jdsample.c
-    Jdtrans.c
-    Jerror.c
-    Jfdctflt.c
-    Jfdctfst.c
-    Jfdctint.c
-    Jidctflt.c
-    Jidctfst.c
-    Jidctint.c
-    Jidctred.c
-    Jmemmgr.c
-    Jmemnobs.c
-    Jquant1.c
-    Jquant2.c
-    Jutils.c
+    jcapimin.c
+    jcapistd.c
+    jccoefct.c
+    jccolor.c
+    jcdctmgr.c
+    jchuff.c
+    jcinit.c
+    jcmainct.c
+    jcmarker.c
+    jcmaster.c
+    jcomapi.c
+    jcparam.c
+    jcphuff.c
+    jcprepct.c
+    jcsample.c
+    jctrans.c
+    jdapimin.c
+    jdapistd.c
+    jdatadst.c
+    jdatasrc.c
+    jdcoefct.c
+    jdcolor.c
+    jddctmgr.c
+    jdhuff.c
+    jdinput.c
+    jdmainct.c
+    jdmarker.c
+    jdmaster.c
+    jdmerge.c
+    jdphuff.c
+    jdpostct.c
+    jdsample.c
+    jdtrans.c
+    jerror.c
+    jfdctflt.c
+    jfdctfst.c
+    jfdctint.c
+    jidctflt.c
+    jidctfst.c
+    jidctint.c
+    jidctred.c
+    jmemmgr.c
+    jmemnobs.c
+    jquant1.c
+    jquant2.c
+    jutils.c
 )
 
 set(JPEG_HEADERS
-    Jchuff.h
-    Jconfig.h
-    Jdct.h
-    Jdhuff.h
-    Jerror.h
-    Jinclude.h
-    Jmemsys.h
-    Jmorecfg.h
-    Jpegint.h
-    Jpeglib.h
-    Jversion.h
+    jchuff.h
+    jconfig.h
+    jdct.h
+    jdhuff.h
+    jerror.h
+    jinclude.h
+    jmemsys.h
+    jmorecfg.h
+    jpegint.h
+    jpeglib.h
+    jversion.h
 )
 
 add_library(jpeg STATIC ${JPEG_SOURCES} ${JPEG_HEADERS})
